--- a/The Abyss/The Abyss.vcxproj.filters
+++ b/The Abyss/The Abyss.vcxproj.filters
@@ -78,11 +78,11 @@
     <ClInclude Include="Stat.h">
       <Filter>코어 파일</Filter>
     </ClInclude>
-    <ClInclude Include="EqupItem.h">
-      <Filter>코어 파일</Filter>
-    </ClInclude>
     <ClInclude Include="AbyssGame.h">
       <Filter>메인 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="EquipItem.h">
+      <Filter>코어 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -131,11 +131,11 @@
     <ClCompile Include="Stat.cpp">
       <Filter>코어 파일</Filter>
     </ClCompile>
-    <ClCompile Include="EqupItem.cpp">
-      <Filter>코어 파일</Filter>
-    </ClCompile>
     <ClCompile Include="AbyssGame.cpp">
       <Filter>메인 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="EquipItem.cpp">
+      <Filter>코어 파일</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
