--- a/The Abyss/The Abyss.vcxproj
+++ b/The Abyss/The Abyss.vcxproj
@@ -158,7 +158,7 @@
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="sleep.h" />
-    <ClInclude Include="Stat.h" />
+    <ClInclude Include="Status.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="steamb23console.h" />
     <ClInclude Include="targetver.h" />
@@ -177,7 +177,7 @@
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="sleep.cpp" />
-    <ClCompile Include="Stat.cpp" />
+    <ClCompile Include="Status.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
