--- a/The Abyss/The Abyss.vcxproj.filters
+++ b/The Abyss/The Abyss.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="PlayerCreateScene.h">
       <Filter>씬 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Battler.h">
+      <Filter>게임 코어 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="The Abyss.cpp">
@@ -163,6 +166,9 @@
     </ClCompile>
     <ClCompile Include="PlayerCreateScene.cpp">
       <Filter>씬 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Battler.cpp">
+      <Filter>게임 코어 파일</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
