배틀시스템 추가,아이템습득 시작

--- a/The Abyss/The Abyss.vcxproj
+++ b/The Abyss/The Abyss.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClInclude Include="AbyssGame.h" />
     <ClInclude Include="Battler.h" />
+    <ClInclude Include="BattleScene.h" />
     <ClInclude Include="ConsoleOption.h" />
     <ClInclude Include="ConsoleText.h" />
     <ClInclude Include="ConsoleTextBox.h" />
@@ -170,6 +171,7 @@
   <ItemGroup>
     <ClCompile Include="AbyssGame.cpp" />
     <ClCompile Include="Battler.cpp" />
+    <ClCompile Include="BattleScene.cpp" />
     <ClCompile Include="ConsoleOption.cpp" />
     <ClCompile Include="ConsoleText.cpp" />
     <ClCompile Include="ConsoleTextBox.cpp" />
