--- a/The Abyss/The Abyss.vcxproj.filters
+++ b/The Abyss/The Abyss.vcxproj.filters
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="소스 파일">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="헤더 파일">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
@@ -108,6 +104,9 @@
     <ClInclude Include="BattleScene.h">
       <Filter>씬 파일</Filter>
     </ClInclude>
+    <ClInclude Include="DungeonScene.h">
+      <Filter>씬 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="The Abyss.cpp">
@@ -174,6 +173,9 @@
       <Filter>게임 코어 파일</Filter>
     </ClCompile>
     <ClCompile Include="BattleScene.cpp">
+      <Filter>씬 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="DungeonScene.cpp">
       <Filter>씬 파일</Filter>
     </ClCompile>
   </ItemGroup>
