몬스터 매니저 기본기능 추가

--- a/The Abyss/The Abyss.vcxproj.filters
+++ b/The Abyss/The Abyss.vcxproj.filters
@@ -107,6 +107,9 @@
     <ClInclude Include="DungeonScene.h">
       <Filter>씬 파일</Filter>
     </ClInclude>
+    <ClInclude Include="MonsterManager.h">
+      <Filter>게임 코어 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="The Abyss.cpp">
@@ -177,6 +180,9 @@
     </ClCompile>
     <ClCompile Include="DungeonScene.cpp">
       <Filter>씬 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MonsterManager.cpp">
+      <Filter>게임 코어 파일</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
