--- a/The Abyss/The Abyss.vcxproj
+++ b/The Abyss/The Abyss.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="Item.h" />
     <ClInclude Include="MainScene.h" />
     <ClInclude Include="Monster.h" />
+    <ClInclude Include="MonsterManager.h" />
     <ClInclude Include="PlayerCreateScene.h" />
     <ClInclude Include="PlayerData.h" />
     <ClInclude Include="Scene.h" />
@@ -183,6 +184,7 @@
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="MainScene.cpp" />
     <ClCompile Include="Monster.cpp" />
+    <ClCompile Include="MonsterManager.cpp" />
     <ClCompile Include="PlayerCreateScene.cpp" />
     <ClCompile Include="PlayerData.cpp" />
     <ClCompile Include="Scene.cpp" />
