--- a/The Abyss/The Abyss.vcxproj.filters
+++ b/The Abyss/The Abyss.vcxproj.filters
@@ -113,6 +113,9 @@
     <ClInclude Include="GameoverScene.h">
       <Filter>씬 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CreditScene.h">
+      <Filter>씬 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="The Abyss.cpp">
@@ -188,6 +191,9 @@
       <Filter>게임 코어 파일</Filter>
     </ClCompile>
     <ClCompile Include="GameoverScene.cpp">
+      <Filter>씬 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CreditScene.cpp">
       <Filter>씬 파일</Filter>
     </ClCompile>
   </ItemGroup>
